Fixed object-tools dropdown overflow

--- a/kmuhelper/static/admin/kmuhelper/css/style.css
+++ b/kmuhelper/static/admin/kmuhelper/css/style.css
@@ -85,6 +85,11 @@ ul.messagelist li:not(:last-child) {
 
 /* Dropdowns in object tools */
 
+.object-tools {
+    overflow-inline: visible !important;
+    display: inline-block;
+}
+
 .object-tools .dropdown {
     position: relative;
     display: inline-block;
@@ -151,6 +156,11 @@ ul.messagelist li:not(:last-child) {
     background-position-x: right;
     background-position-y: -160px;
 } */
+
+.dropdown > a::after, .dropdown > div > b:first-child::after {
+  content: "▼";
+  padding-left: 0.5em;
+}
 
 /* Additional buttons in submit row */
 
